--- a/data.html
+++ b/data.html
@@ -1,50 +1,50 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Charts — US States Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="assets/styles.css"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+  <script type="module">
+    import { renderCharts } from './assets/charts.js';
+    window.addEventListener('DOMContentLoaded', renderCharts);
+  </script>
 </head>
 <body>
-  <div class="navbar">
-    <div class="nav-inner">
-      <a class="brand" href="index.html">US States Dashboard</a>
-      <div class="nav-center">
-        <a href="read.html">Data Table</a><a href="create.html">Create</a>
-        <a href="update.html">Update</a><a href="delete.html">Delete</a>
-        <a href="data.html">Charts</a><a href="about.html">About</a>
-      </div>
-      <div class="nav-right"><a href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a></div>
+  <header class="header">
+    <div class="container row">
+      <a class="brand-badge" href="index.html">US States Dashboard</a>
+      <nav class="nav">
+        <a href="read.html">Data Table</a>
+        <a href="create.html">Create</a>
+        <a href="update.html">Update</a>
+        <a href="delete.html">Delete</a>
+        <a class="active" href="data.html">Charts</a>
+        <a href="about.html">About</a>
+      </nav>
+      <a class="gh-pill" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a>
     </div>
-  </div>
+  </header>
 
-  <main class="container">
+  <main class="container section">
     <div class="grid grid-3">
-      <div class="card chart-card"><canvas id="chartPopulation"></canvas></div>
-      <div class="card chart-card"><canvas id="chartGdp"></canvas></div>
-      <div class="card chart-card"><canvas id="chartArea"></canvas></div>
+      <div class="card"><h3 class="card-title">Population Share (Top 6)</h3><canvas id="ch-pop" height="220"></canvas></div>
+      <div class="card"><h3 class="card-title">GDP by State (Top 8)</h3><canvas id="ch-gdp" height="220"></canvas></div>
+      <div class="card"><h3 class="card-title">Land Area (Top 10)</h3><canvas id="ch-area" height="220"></canvas></div>
     </div>
 
-    <div class="card soft" style="margin-top:18px">
-      <div class="h2">External Insights</div>
-      <p class="muted">Charts above reflect your current local dataset; insights are fetched from the World Bank on the Home page.</p>
-      <a class="btn ghost" href="index.html">See on Home</a>
-    </div>
+    <section class="section">
+      <div class="card"><span id="chart-source" class="help"></span></div>
+    </section>
   </main>
 
-  <div class="footer">
+  <footer class="container footer">
     <span>© 2025 US States Dashboard</span>
-    <span>Built with <span class="heart">❤️</span> by Faisal, Hongxu & Jonathan</span>
-  </div>
+    <span class="built">Built with ❤️ by Faisal, Hongxu & Jonathan</span>
+  </footer>
 
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
-
-  <script type="module">
-    import {renderCharts} from './assets/charts.js';
-    renderCharts();
-  </script>
 </body>
 </html>
