--- a/about.html
+++ b/about.html
@@ -5,6 +5,35 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>About — US States Dashboard</title>
   <link rel="stylesheet" href="assets/styles.css"/>
+  <style>
+    /* Increase team image size */
+    .member-photo {
+      width: 150px;
+      height: 150px;
+      border-radius: 14px;
+      object-fit: cover;
+      border: 2px solid #274b59;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    }
+    .member {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      padding: 18px;
+    }
+    .team {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: space-around;
+    }
+    @media (max-width: 600px) {
+      .member-photo {
+        width: 120px;
+        height: 120px;
+      }
+    }
+  </style>
 </head>
 <body>
   <div class="navbar">
@@ -15,7 +44,9 @@
         <a href="update.html">Update</a><a href="delete.html">Delete</a>
         <a href="data.html">Charts</a><a href="about.html">About</a>
       </div>
-      <div class="nav-right"><a href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a></div>
+      <div class="nav-right">
+        <a href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a>
+      </div>
     </div>
   </div>
 
