--- a/update.html
+++ b/update.html
@@ -1,74 +1,152 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Update — US States Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="assets/styles.css"/>
+  <title>US States Dashboard – Update</title>
+  <link rel="stylesheet" href="./assets/styles.css"/>
   <script type="module">
-    import { bindUpdate } from './assets/controller.js';
-    window.addEventListener('DOMContentLoaded', bindUpdate);
+    import { getStates, setStates, formatNumber } from './assets/utils.js';
+
+    function fillStateList(){
+      const select = document.getElementById('stateSelect');
+      select.innerHTML = '';
+      getStates().forEach(s=>{
+        const o = document.createElement('option');
+        o.value = s.id; o.textContent = `${s.name} (${s.id})`;
+        select.appendChild(o);
+      });
+    }
+
+    function loadSelected(){
+      const id = document.getElementById('stateSelect').value;
+      const s = getStates().find(x=>x.id===id);
+      const form = document.getElementById('frm');
+      if(!s){ form.reset(); return; }
+      form.id.value = s.id;
+      form.name.value = s.name;
+      form.region.value = s.region || 'West';
+      form.capital.value = s.capital || '';
+      form.cities.value = s.cities || '';
+      form.population.value = s.population || '';
+      form.gdp.value = s.gdp || '';
+      form.area.value = s.area_km2 || '';
+      form.scrollIntoView({behavior:'smooth', block:'start'});
+    }
+
+    function saveChanges(e){
+      e.preventDefault();
+      const f = e.target;
+      const updated = {
+        id: (f.id.value||'').toUpperCase().slice(0,2),
+        name: f.name.value.trim(),
+        region: f.region.value,
+        capital: f.capital.value.trim(),
+        cities: Number(f.cities.value||0),
+        population: Number(f.population.value||0),
+        gdp: Number(f.gdp.value||0),
+        area_km2: Number(f.area.value||0)
+      };
+      const arr = getStates();
+      const idx = arr.findIndex(x=>x.id===updated.id);
+      if(idx>=0) arr[idx] = updated;
+      else arr.push(updated);
+      setStates(arr);
+      alert('Saved. Charts & table will reflect the update.');
+    }
+
+    document.addEventListener('DOMContentLoaded', ()=>{
+      fillStateList();
+      document.getElementById('btnLoad').addEventListener('click', loadSelected);
+      document.getElementById('frm').addEventListener('submit', saveChanges);
+      // Deep link support: update.html?id=CA
+      const url = new URL(location.href);
+      const qid = url.searchParams.get('id');
+      if(qid){
+        document.getElementById('stateSelect').value = qid;
+        loadSelected();
+      }
+    });
   </script>
 </head>
 <body>
-  <header class="header">
-    <div class="container row">
-      <a class="brand-badge" href="index.html">US States Dashboard</a>
-      <nav class="nav">
-        <a href="read.html">Data Table</a>
-        <a href="create.html">Create</a>
-        <a class="active" href="update.html">Update</a>
-        <a href="delete.html">Delete</a>
-        <a href="data.html">Charts</a>
-        <a href="about.html">About</a>
-      </nav>
-      <a class="gh-pill" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a>
-    </div>
-  </header>
+<header class="header">
+  <div class="container">
+    <a class="brand" href="./index.html">US States Dashboard</a>
+    <nav class="nav">
+      <a href="./read.html">Data Table</a>
+      <a href="./create.html">Create</a>
+      <a class="active" href="./update.html">Update</a>
+      <a href="./delete.html">Delete</a>
+      <a href="./data.html">Charts</a>
+      <a href="./about.html">About</a>
+      <a class="pill" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a>
+    </nav>
+  </div>
+</header>
 
-  <main class="container section">
-    <div class="card">
-      <h3 class="card-title">Choose a state to edit</h3>
-      <div class="row-3" style="margin-bottom:14px">
-        <select id="pick-state"></select>
-        <button id="load-btn" class="btn secondary">Load</button>
-        <a href="read.html" class="btn secondary">Back to Table</a>
+<main class="page">
+  <section class="section">
+    <h3>Choose a state to edit</h3>
+    <div class="grid cols-2">
+      <div>
+        <label for="stateSelect">State</label>
+        <select id="stateSelect" class="input"></select>
       </div>
-
-      <form id="update-form">
-        <div class="row-3">
-          <div><label>State ID (2-letter Code)</label><input name="id" required/></div>
-          <div><label>State Name</label><input name="name" required/></div>
-          <div>
-            <label>Region</label>
-            <select name="region"><option>West</option><option>South</option><option>Midwest</option><option>Northeast</option></select>
-          </div>
-        </div>
-
-        <div class="row-3" style="margin-top:10px">
-          <div><label>Capital</label><input name="capital"/></div>
-          <div><label>Number of Cities</label><input name="cities" type="number" min="0"/></div>
-          <div><label>Population</label><input name="population" type="number" min="0"/></div>
-        </div>
-
-        <div class="row-3" style="margin-top:10px">
-          <div><label>GDP (USD)</label><input name="gdp" type="number" min="0"/></div>
-          <div><label>Land Area (km²)</label><input name="area" type="number" min="0"/></div>
-          <div style="display:flex; align-items:flex-end; gap:10px">
-            <button class="btn" type="submit">Save Changes</button>
-            <a class="btn secondary" href="read.html">Cancel</a>
-          </div>
-        </div>
-      </form>
+      <div style="display:flex;gap:10px;align-items:end">
+        <button id="btnLoad" class="btn">Load</button>
+        <a class="btn secondary" href="./read.html">Back to Table</a>
+      </div>
     </div>
-  </main>
+  </section>
 
-  <footer class="container footer">
-    <span>© 2025 US States Dashboard</span>
-    <span class="built">Built with ❤️ by Faisal, Hongxu & Jonathan</span>
-  </footer>
+  <section class="section alt">
+    <form id="frm" class="grid cols-2">
+      <div>
+        <label>State ID (2-letter Code)</label>
+        <input class="input" name="id" maxlength="2" placeholder="e.g., CA"/>
+      </div>
+      <div>
+        <label>State Name</label>
+        <input class="input" name="name"/>
+      </div>
+      <div>
+        <label>Region</label>
+        <select class="input" name="region">
+          <option>West</option><option>South</option><option>Midwest</option><option>Northeast</option>
+        </select>
+      </div>
+      <div>
+        <label>Capital</label>
+        <input class="input" name="capital"/>
+      </div>
+      <div>
+        <label>Number of Cities</label>
+        <input class="input" type="number" name="cities" min="0"/>
+      </div>
+      <div>
+        <label>Population</label>
+        <input class="input" type="number" name="population" min="0"/>
+      </div>
+      <div>
+        <label>GDP (USD)</label>
+        <input class="input" type="number" name="gdp" min="0" step="1"/>
+      </div>
+      <div>
+        <label>Land Area (km²)</label>
+        <input class="input" type="number" name="area" min="0"/>
+      </div>
+      <div style="grid-column:1/-1; display:flex; gap:10px; margin-top:6px">
+        <button class="btn" type="submit">Save Changes</button>
+        <a class="btn ghost" href="./read.html">Cancel</a>
+      </div>
+    </form>
+  </section>
 
-  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
+  <div class="footer container">
+    <div>© 2025 US States Dashboard</div>
+    <div class="built">Built with ❤️ by Faisal, Hongxu & Jonathan</div>
+  </div>
+</main>
 </body>
 </html>
