--- a/delete.html
+++ b/delete.html
@@ -1,58 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Delete — US States Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Delete State — US States</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css"/>
   <script type="module">
-    import { bindDelete } from './assets/controller.js';
-    window.addEventListener('DOMContentLoaded', bindDelete);
+    import { bootDelete } from './assets/controller.js';
+    window.addEventListener('DOMContentLoaded', bootDelete);
   </script>
 </head>
 <body>
-  <header class="header">
-    <div class="container row">
-      <a class="brand-badge" href="index.html">US States Dashboard</a>
+  <div class="container">
+    <div class="header">
+      <a class="brand" href="index.html">US States Dashboard</a>
       <nav class="nav">
-        <a href="read.html">Data Table</a>
+        <a href="index.html">Home</a>
+        <a href="data.html">Data Table</a>
         <a href="create.html">Create</a>
         <a href="update.html">Update</a>
         <a class="active" href="delete.html">Delete</a>
-        <a href="data.html">Charts</a>
         <a href="about.html">About</a>
+        <a href="https://github.com/MdFaisalS2025/us-states-dashboard" target="_blank">GitHub</a>
       </nav>
-      <a class="gh-pill" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a>
     </div>
-  </header>
 
-  <main class="container section">
-    <div class="card">
-      <h3 class="card-title">Delete a State</h3>
-      <p class="help">This action cannot be undone.</p>
-      <form id="delete-form" class="row-3" style="align-items:end">
-        <div>
-          <label>Choose by ID</label>
-          <select id="delete-pick"></select>
-        </div>
-        <div>
-          <label>Or enter ID manually</label>
-          <input id="delete-id" placeholder="e.g., CA"/>
-        </div>
-        <div>
-          <button class="btn warning" type="submit">Delete</button>
-          <a class="btn secondary" href="read.html" style="margin-left:10px">Cancel</a>
-        </div>
-      </form>
-    </div>
-  </main>
-
-  <footer class="container footer">
-    <span>© 2025 US States Dashboard</span>
-    <span class="built">Built with ❤️ by Faisal, Hongxu & Jonathan</span>
-  </footer>
-
-  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
+    <div class="panel"><div class="panel-inner">
+      <label class="label" for="select-del">Choose a state to delete</label>
+      <select id="select-del" class="input"></select>
+      <div class="mt16">
+        <button id="btn-del" class="btn danger">Delete</button>
+        <a class="btn secondary" href="data.html">Cancel</a>
+      </div>
+      <p class="mt16">This action cannot be undone.</p>
+    </div></div>
+  </div>
 </body>
 </html>
