--- a/data.html
+++ b/data.html
@@ -2,45 +2,56 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>US States Dashboard – Charts</title>
-  <link rel="stylesheet" href="./assets/styles.css"/>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-  <script type="module" src="./assets/charts.js" defer></script>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Data Table — US States</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/styles.css"/>
+  <script type="module">
+    import { bootTable } from './assets/controller.js';
+    window.addEventListener('DOMContentLoaded', bootTable);
+  </script>
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <a class="brand" href="./index.html">US States Dashboard</a>
+  <div class="container">
+    <div class="header">
+      <a class="brand" href="index.html">US States Dashboard</a>
       <nav class="nav">
-        <a href="./read.html">Data Table</a>
-        <a href="./create.html">Create</a>
-        <a href="./update.html">Update</a>
-        <a href="./delete.html">Delete</a>
-        <a class="active" href="./data.html">Charts</a>
-        <a href="./about.html">About</a>
-        <a class="pill" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a>
+        <a href="index.html">Home</a>
+        <a class="active" href="data.html">Data Table</a>
+        <a href="create.html">Create</a>
+        <a href="update.html">Update</a>
+        <a href="delete.html">Delete</a>
+        <a href="about.html">About</a>
+        <a href="https://github.com/MdFaisalS2025/us-states-dashboard" target="_blank">GitHub</a>
       </nav>
     </div>
-  </header>
 
-  <main class="page">
-    <section class="grid cols-3">
-      <div class="card chart-card"><canvas id="chartPop"></canvas></div>
-      <div class="card chart-card"><canvas id="chartGdp"></canvas></div>
-      <div class="card chart-card"><canvas id="chartArea"></canvas></div>
-    </section>
+    <div class="panel"><div class="panel-inner">
+      <div class="form-grid mt8">
+        <div>
+          <label class="label" for="q">Search</label>
+          <input id="q" class="input" placeholder="Search by name, capital, or code…"/>
+        </div>
+        <div>
+          <label class="label" for="filter-region">Region</label>
+          <select id="filter-region" class="input"><option value="">All regions</option></select>
+        </div>
+      </div>
+      <div class="table-wrap mt16">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>ID</th><th>Name</th><th>Capital</th>
+              <th>Population</th><th>GDP (USD)</th><th>Area (km²)</th>
+              <th>Cities</th><th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="states-body"></tbody>
+        </table>
+      </div>
+    </div></div>
 
-    <section class="section alt">
-      <h3>External Insights</h3>
-      <p>Charts reflect your current local dataset; World Bank insights are fetched on the <a href="./index.html">Home</a> page.</p>
-      <a class="btn secondary" href="./index.html">See on Home</a>
-    </section>
-
-    <div class="footer container">
-      <div>© 2025 US States Dashboard</div>
-      <div class="built">Built with ❤️ by Faisal, Hongxu & Jonathan</div>
-    </div>
-  </main>
+    <div class="footer">Tip: use <strong>Create</strong> to add more states.</div>
+  </div>
 </body>
 </html>
